// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead renderItems() returns the correct jsx for custom structure of items 1`] = `
<ul
  className="css-evdl91"
>
  <li
    className="css-g84m4x"
  >
    o
    <strong
      className="css-35ezg3"
    >
      ra
    </strong>
    nge
  </li>
  <li
    className="css-g84m4x"
  >
    g
    <strong
      className="css-35ezg3"
    >
      ra
    </strong>
    pe
  </li>
</ul>
`;

exports[`Typeahead renderItems() returns the correct jsx for simple items array 1`] = `
<ul
  className="css-evdl91"
>
  <li
    className="css-g84m4x"
  >
    o
    <strong
      className="css-35ezg3"
    >
      ra
    </strong>
    nge
  </li>
  <li
    className="css-g84m4x"
  >
    g
    <strong
      className="css-35ezg3"
    >
      ra
    </strong>
    pe
  </li>
</ul>
`;

exports[`Typeahead renders correctly when fetching 1`] = `
.emotion-2 {
  line-height: 1.53;
}

.emotion-1 {
  width: 100%;
  padding: 0 10px;
  box-sizing: border-box;
}

.emotion-0 {
  border: solid 2px #8de2e0;
  font-family: Ciutadella;
  font-size: 22px;
  box-sizing: border-box;
  width: 100%;
  padding: 14px 10px 10px 10px;
}

.emotion-0:focus {
  outline-color: #8de2e0;
}

<Typeahead
  badgeToString={[Function]}
  defaultHighlightedIndex={[Function]}
  defaultIsOpen={[Function]}
  disabled={false}
  environment={[Function]}
  getA11yStatusMessage={[Function]}
  getItemId={[Function]}
  highlightedIndex={[Function]}
  id={null}
  initialHighlightedIndex={[Function]}
  initialInputValue={[Function]}
  initialIsOpen={[Function]}
  initialSelectedItem={null}
  inputId={[Function]}
  inputValue={[Function]}
  isFetchingList={true}
  isOpen={[Function]}
  itemCount={[Function]}
  itemToString={[Function]}
  items={
    Array [
      "apple",
      "pear",
      "orange",
      "grape",
      "banana",
    ]
  }
  label=""
  labelId={[Function]}
  maxLength={100}
  menuId={[Function]}
  message=""
  minChars={0}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onInputValueChange={null}
  onOuterClick={[Function]}
  onSelect={[Function]}
  onStateChange={[Function]}
  onUserAction={[Function]}
  placeholder=""
  scrollIntoView={[Function]}
  selectedItem={[Function]}
  selectedItemChanged={[Function]}
  setRef={[Function]}
  suppressRefError={[Function]}
  valid={true}
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    initialSelectedItem={null}
    isFetchingList={true}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="downshift-3-label"
      aria-owns={null}
      className="emotion-2"
      role="combobox"
    >
      <div
        className="emotion-1"
      >
        <input
          aria-activedescendant={null}
          aria-autocomplete="list"
          aria-controls={null}
          aria-labelledby="downshift-3-label"
          autoComplete="off"
          className="emotion-0"
          disabled={false}
          id={null}
          maxLength={100}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          value=""
        />
      </div>
      <span>
        Loading...
      </span>
    </div>
  </Downshift>
</Typeahead>
`;

exports[`Typeahead renders correctly with defaults 1`] = `
.emotion-2 {
  line-height: 1.53;
}

.emotion-1 {
  width: 100%;
  padding: 0 10px;
  box-sizing: border-box;
}

.emotion-0 {
  border: solid 2px #8de2e0;
  font-family: Ciutadella;
  font-size: 22px;
  box-sizing: border-box;
  width: 100%;
  padding: 14px 10px 10px 10px;
}

.emotion-0:focus {
  outline-color: #8de2e0;
}

<Typeahead
  badgeToString={[Function]}
  defaultHighlightedIndex={[Function]}
  defaultIsOpen={[Function]}
  disabled={false}
  environment={[Function]}
  getA11yStatusMessage={[Function]}
  getItemId={[Function]}
  highlightedIndex={[Function]}
  id={null}
  initialHighlightedIndex={[Function]}
  initialInputValue={[Function]}
  initialIsOpen={[Function]}
  initialSelectedItem={null}
  inputId={[Function]}
  inputValue={[Function]}
  isFetchingList={false}
  isOpen={[Function]}
  itemCount={[Function]}
  itemToString={[Function]}
  items={Array []}
  label=""
  labelId={[Function]}
  maxLength={100}
  menuId={[Function]}
  message=""
  minChars={0}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onInputValueChange={null}
  onOuterClick={[Function]}
  onSelect={[Function]}
  onStateChange={[Function]}
  onUserAction={[Function]}
  placeholder=""
  scrollIntoView={[Function]}
  selectedItem={[Function]}
  selectedItemChanged={[Function]}
  setRef={[Function]}
  suppressRefError={[Function]}
  valid={true}
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    initialSelectedItem={null}
    isFetchingList={false}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      aria-owns={null}
      className="emotion-2"
      role="combobox"
    >
      <div
        className="emotion-1"
      >
        <input
          aria-activedescendant={null}
          aria-autocomplete="list"
          aria-controls={null}
          aria-labelledby="downshift-0-label"
          autoComplete="off"
          className="emotion-0"
          disabled={false}
          id={null}
          maxLength={100}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          value=""
        />
      </div>
    </div>
  </Downshift>
</Typeahead>
`;

exports[`Typeahead renders correctly with error state 1`] = `
.emotion-2 {
  line-height: 1.53;
}

.emotion-1 {
  width: 100%;
  padding: 0 10px;
  box-sizing: border-box;
}

.emotion-0 {
  border: solid 2px #8de2e0;
  font-family: Ciutadella;
  font-size: 22px;
  box-sizing: border-box;
  width: 100%;
  padding: 14px 10px 10px 10px;
}

.emotion-0:focus {
  outline-color: #8de2e0;
}

<Typeahead
  badgeToString={[Function]}
  defaultHighlightedIndex={[Function]}
  defaultIsOpen={[Function]}
  disabled={false}
  environment={[Function]}
  getA11yStatusMessage={[Function]}
  getItemId={[Function]}
  highlightedIndex={[Function]}
  id={null}
  initialHighlightedIndex={[Function]}
  initialInputValue={[Function]}
  initialIsOpen={[Function]}
  initialSelectedItem={null}
  inputId={[Function]}
  inputValue={[Function]}
  isFetchingList={false}
  isOpen={[Function]}
  itemCount={[Function]}
  itemToString={[Function]}
  items={
    Array [
      "apple",
      "pear",
      "orange",
      "grape",
      "banana",
    ]
  }
  label=""
  labelId={[Function]}
  maxLength={100}
  menuId={[Function]}
  message="Something went wrong"
  minChars={0}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onInputValueChange={null}
  onOuterClick={[Function]}
  onSelect={[Function]}
  onStateChange={[Function]}
  onUserAction={[Function]}
  placeholder=""
  scrollIntoView={[Function]}
  selectedItem={[Function]}
  selectedItemChanged={[Function]}
  setRef={[Function]}
  suppressRefError={[Function]}
  valid={false}
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    initialSelectedItem={null}
    isFetchingList={false}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="downshift-2-label"
      aria-owns={null}
      className="emotion-2"
      role="combobox"
    >
      <div
        className="emotion-1"
      >
        <input
          aria-activedescendant={null}
          aria-autocomplete="list"
          aria-controls={null}
          aria-labelledby="downshift-2-label"
          autoComplete="off"
          className="emotion-0"
          disabled={false}
          id={null}
          maxLength={100}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          value=""
        />
      </div>
      <div>
        Something went wrong
      </div>
    </div>
  </Downshift>
</Typeahead>
`;

exports[`Typeahead renders correctly with items 1`] = `
.emotion-2 {
  line-height: 1.53;
}

.emotion-1 {
  width: 100%;
  padding: 0 10px;
  box-sizing: border-box;
}

.emotion-0 {
  border: solid 2px #8de2e0;
  font-family: Ciutadella;
  font-size: 22px;
  box-sizing: border-box;
  width: 100%;
  padding: 14px 10px 10px 10px;
}

.emotion-0:focus {
  outline-color: #8de2e0;
}

<Typeahead
  badgeToString={[Function]}
  defaultHighlightedIndex={[Function]}
  defaultIsOpen={[Function]}
  disabled={false}
  environment={[Function]}
  getA11yStatusMessage={[Function]}
  getItemId={[Function]}
  highlightedIndex={[Function]}
  id={null}
  initialHighlightedIndex={[Function]}
  initialInputValue={[Function]}
  initialIsOpen={[Function]}
  initialSelectedItem={null}
  inputId={[Function]}
  inputValue={[Function]}
  isFetchingList={false}
  isOpen={[Function]}
  itemCount={[Function]}
  itemToString={[Function]}
  items={
    Array [
      "apple",
      "pear",
      "orange",
      "grape",
      "banana",
    ]
  }
  label=""
  labelId={[Function]}
  maxLength={100}
  menuId={[Function]}
  message=""
  minChars={0}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onInputValueChange={null}
  onOuterClick={[Function]}
  onSelect={[Function]}
  onStateChange={[Function]}
  onUserAction={[Function]}
  placeholder=""
  scrollIntoView={[Function]}
  selectedItem={[Function]}
  selectedItemChanged={[Function]}
  setRef={[Function]}
  suppressRefError={[Function]}
  valid={true}
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    initialSelectedItem={null}
    isFetchingList={false}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      aria-owns={null}
      className="emotion-2"
      role="combobox"
    >
      <div
        className="emotion-1"
      >
        <input
          aria-activedescendant={null}
          aria-autocomplete="list"
          aria-controls={null}
          aria-labelledby="downshift-1-label"
          autoComplete="off"
          className="emotion-0"
          disabled={false}
          id={null}
          maxLength={100}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          value=""
        />
      </div>
    </div>
  </Downshift>
</Typeahead>
`;
